tests/diagnostics/catalog/snapshots/ir/IR0018.snap
error[IR0018]: IR_E_EXPECTED_IDENTIFIER
 --> tests/diagnostics/catalog/sources/ir/IR0018.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0018
  = help: keep IR validation diagnostics structured and catalog-backed
